--- a/Rapport/bibtex/litteratur.bib
+++ b/Rapport/bibtex/litteratur.bib
@@ -28,13 +28,19 @@
 @manual{uppaal,
 	author ={{Uppsala University} and {Aalborg University}},
 	title ={UPPAAL},
-	address = {\url{http://www.uppaal.org/}},
+	address = {\url{http://www.uppaal.org/}}
 }
 
 @manual{boundt,
 	author ={{Tidorum Ltd}},
 	title ={Bound-T},
-	address = {\url{http://www.bound-t.com/}},
+	address = {\url{http://www.bound-t.com/}}
+}
+
+@manual{au,
+	author ={Warren MacEvoy and Matthew Murdoch and freenerd and John Macdonald and nicolaspanel and Matt Paine},
+	title ={ArduinoUnit},
+	address = {\url{https://github.com/mmurdoch/arduinounit}}
 }
 
 @article{maalere,
