--- a/Rapport/formalia/forord.tex
+++ b/Rapport/formalia/forord.tex
@@ -43,6 +43,7 @@ Throughout the report requirements are split into four colours with four differe
 
 
 \chapter*{Process model}
+\label{Process model}
 The process model is a meld of elements from both plan driven and agile development. The process is plan driven in so far as to include a clear goal of what the initial requirements of the system are. The process model is very agile in that, although there is a clear outline as to what the requirements are, these are incrementally approached, with a simple starting point becoming increasingly covering of the project vision through the subsequent increments. The reason the group approached this project with our 'own' process model is to better explain what we're actually doing, rather than forcing ourselves into picking a development method and try to explain what we're doing according to that method.
 
 The increments will be split up into four sections. Initially some of the already known requirements will be considered from previous increments and for the first increment from the analysis and hardware chapters, and these requirements will be the topic of the increment.
