--- a/Rapport/formalia/discussion.tex
+++ b/Rapport/formalia/discussion.tex
@@ -30,7 +30,7 @@ Instead the predefined area should not be considered and the robot should have a
 	\label{figure:graph}
 \end{figure}
 
-\textbf{Process analysis}
+\textbf{Process model analysis}
 
 The process model used for this project, which is described in section \ref{Process model}, is a reflection on how our perspective on the processes we usually follow. It is inspired by XP, including pair programming and agile development with incrementally changing requirements. If the solution to our problem would be a safety critical solution, a more test-driven process model would be more suitable. Catching regular trash is not a hard real-time, safety critical task, unless the trash is a threat to human life or mission critical.\newline
 The process model itself has worked out rather well since it isn’t restrictive and provides a very large degree of freedom when working with the project compared to a rigid adherence to a well established model such as the waterfall model. \newline
