Conc, dics, og futurework

--- a/Rapport/appendiks/Inc2.tex
+++ b/Rapport/appendiks/Inc2.tex
@@ -21,7 +21,7 @@ The requirement marked with blue will be considered throughout this chapter.
 		\item {The thrown trash should be detected and tracked by a Microsoft Kinect}
 		\item \textcolor{blue}{The Kinect should send the coordinates of the impact point of the trash to the robot}
 	\end{itemize}
-	\item The robot should know where the the thrown trash will land
+	\item The robot should be able to calculate the impact point for the object
 	\begin{itemize}
 		\item {Trajectory prediction should be used to calculate impact point of the thrown trash}
 	\end{itemize}
@@ -218,7 +218,7 @@ This is the requirements after finalizing increment two:
 		\item {The thrown trash should be detected and tracked by a Microsoft Kinect}
 		\item \textcolor{green}{The Kinect should send the coordinates of the impact point of the trash to the robot}
 	\end{itemize}
-	\item The robot should know where the the thrown trash will land
+	\item The robot should be able to calculate the impact point for the object
 	\begin{itemize}
 		\item {Trajectory prediction should be used to calculate impact point of the thrown trash}
 	\end{itemize}
