--- a/Rapport/kontekst/DesignSpecification.tex
+++ b/Rapport/kontekst/DesignSpecification.tex
@@ -25,7 +25,7 @@ The requirements for the project have been conducted through out the whole proce
 		\item {The thrown trash should be detected and tracked by a Microsoft Kinect}
 		\item {The Kinect should send the coordinates of the impact point of the trash to the robot}
 	\end{itemize}
-	\item The robot should know where the the thrown trash will land
+	\item The robot should be able to calculate the impact point for the object
 	\begin{itemize}
 		\item {Trajectory prediction should be used to calculate impact point of the thrown trash}
 	\end{itemize}
