--- a/Rapport/appendiks/Inc3.tex
+++ b/Rapport/appendiks/Inc3.tex
@@ -20,7 +20,7 @@ The procedure of this increment will be the same as the previous ones. The requi
 		\item {The thrown trash should be detected and tracked by a Microsoft Kinect}
 		\item {The Kinect should send the coordinates of the impact point of the trash to the robot}
 	\end{itemize}
-	\item The robot should know where the the thrown trash will land
+	\item The robot should be able to calculate the impact point for the object
 	\begin{itemize}
 		\item {Trajectory prediction should be used to calculate impact point of the thrown trash}
 	\end{itemize}
@@ -179,7 +179,7 @@ After finalizing increment three the requirements in the following list will be 
 		\item {The thrown trash should be detected and tracked by a Microsoft Kinect}
 		\item {The Kinect should send the coordinates of the impact point of the trash to the robot}
 	\end{itemize}
-	\item The robot should know where the the thrown trash will land
+	\item The robot should be able to calculate the impact point for the object
 	\begin{itemize}
 		\item {Trajectory prediction should be used to calculate impact point of the thrown trash}
 	\end{itemize}
